--- a/ressources/components/table/style.css
+++ b/ressources/components/table/style.css
@@ -17,6 +17,7 @@ table.table thead th {
     text-align: left;
     padding: 12px 10px;
     font-weight: 700;
+    font-size: 18px;
     color: var(--dark);
 }
 
