--- a/ressources/components/button/style.css
+++ b/ressources/components/button/style.css
@@ -1,4 +1,7 @@
-button.button {
+.button {
+    display: inline-flex;
+    align-items: center;
+    gap: 0.25rem;
     padding: 0.5rem 1rem;
     border-radius: 25px;
     border: none;
@@ -7,10 +10,22 @@ button.button {
     transition: all 0.3s;
 }
 
-.button:disabled {
+.button.light:not(.outline) {
     background: var(--light);
-    color: var(--gray);
-    border: 2px solid var(--gray);
+    color: var(--dark);
+}
+
+.button.light:not(.outline):hover {
+    filter: brightness(95%);
+}
+
+.button.dark:not(.outline) {
+    background: var(--dark);
+    color: var(--light);
+}
+
+.button.dark:not(.outline):hover {
+    filter: brightness(105%);
 }
 
 .button.light.outline {
@@ -19,7 +34,7 @@ button.button {
     border: 2px solid var(--dark);
 }
 
-.button.light.outline:not(:disabled):hover {
+.button.light.outline:hover {
     background-color: var(--dark);
     color: var(--light);
     border: 2px solid var(--dark);
@@ -31,8 +46,15 @@ button.button {
     border: 2px solid var(--light);
 }
 
-.button.dark.outline:not(:disabled):hover {
+.button.dark.outline:hover {
     background-color: var(--light);
     color: var(--dark);
     border: 2px solid var(--light);
+}
+
+.button:disabled {
+    background: var(--light) !important;
+    color: var(--gray) !important;
+    border: 2px solid var(--gray) !important;
+    cursor: not-allowed !important;
 }
