--- a/ressources/components/button/style.css
+++ b/ressources/components/button/style.css
@@ -4,7 +4,6 @@
     gap: 0.25rem;
     padding: 0.5rem 1rem;
     border-radius: 25px;
-    border: none;
     font-size: 1rem;
     cursor: pointer;
     transition: all 0.3s;
@@ -13,6 +12,7 @@
 .button.light:not(.outline) {
     background: var(--light);
     color: var(--dark);
+    border: 1px solid var(--dark);
 }
 
 .button.light:not(.outline):hover {
@@ -22,6 +22,7 @@
 .button.dark:not(.outline) {
     background: var(--dark);
     color: var(--light);
+    border: 1px solid var(--light);
 }
 
 .button.dark:not(.outline):hover {
