--- a/ressources/components/search-bar/style.css
+++ b/ressources/components/search-bar/style.css
@@ -13,7 +13,7 @@ input[type="search"] {
     padding: 0.5rem 1rem;
     color: var(--dark);
     border-radius: 25px;
-    border: none;
+    border: 1px solid var(--gray);
     font-size: 1rem;
     width: 100%;
 }
