--- a/ressources/components/button/style.css
+++ b/ressources/components/button/style.css
@@ -29,6 +29,16 @@
     filter: brightness(105%);
 }
 
+.button.danger:not(.outline) {
+    background: var(--danger);
+    color: var(--light);
+    border: 2px solid var(--danger);
+}
+
+.button.danger:not(.outline):hover {
+    filter: brightness(105%);
+}
+
 .button.light.outline {
     background: var(--light);
     color: var(--dark);
@@ -50,6 +60,18 @@
 .button.dark.outline:hover {
     background-color: var(--light);
     color: var(--dark);
+    border: 2px solid var(--light);
+}
+
+.button.danger.outline {
+    background-color: var(--danger);
+    color: var(--light);
+    border: 2px solid var(--light);
+}
+
+.button.danger.outline:hover {
+    background-color: var(--light);
+    color: var(--danger);
     border: 2px solid var(--light);
 }
 
