--- a/public/css/main.css
+++ b/public/css/main.css
@@ -67,6 +67,10 @@ a:hover {
     filter: brightness(1.15);
 }
 
+a.link {
+    text-decoration: underline;
+}
+
 input,
 textarea {
     font-family: "Inter", "Roboto", sans-serif;
