--- a/ressources/components/button/style.css
+++ b/ressources/components/button/style.css
@@ -9,35 +9,22 @@
     transition: all 0.3s;
 }
 
+.button:disabled {
+    background: var(--light) !important;
+    color: var(--gray) !important;
+    border: 2px solid var(--gray) !important;
+    cursor: not-allowed !important;
+}
+
+/* Light standard */
+
 .button.light:not(.outline) {
     background: var(--light);
     color: var(--dark);
     border: 2px solid var(--light);
 }
 
-.button.light:not(.outline):hover {
-    filter: brightness(95%);
-}
-
-.button.dark:not(.outline) {
-    background: var(--dark);
-    color: var(--light);
-    border: 2px solid var(--dark);
-}
-
-.button.dark:not(.outline):hover {
-    filter: brightness(105%);
-}
-
-.button.danger:not(.outline) {
-    background: var(--danger);
-    color: var(--light);
-    border: 2px solid var(--danger);
-}
-
-.button.danger:not(.outline):hover {
-    filter: brightness(105%);
-}
+/* Light outlined */
 
 .button.light.outline {
     background: var(--light);
@@ -51,6 +38,16 @@
     border: 2px solid var(--dark);
 }
 
+/* Dark standard */
+
+.button.dark:not(.outline) {
+    background: var(--dark);
+    color: var(--light);
+    border: 2px solid var(--dark);
+}
+
+/* Dark outlined */
+
 .button.dark.outline {
     background-color: var(--dark);
     color: var(--light);
@@ -63,6 +60,16 @@
     border: 2px solid var(--light);
 }
 
+/* Danger standard */
+
+.button.danger:not(.outline) {
+    background: var(--danger);
+    color: var(--light);
+    border: 2px solid var(--danger);
+}
+
+/* Danger outlined */
+
 .button.danger.outline {
     background-color: var(--danger);
     color: var(--light);
@@ -72,12 +79,5 @@
 .button.danger.outline:hover {
     background-color: var(--light);
     color: var(--danger);
-    border: 2px solid var(--light);
-}
-
-.button:disabled {
-    background: var(--light) !important;
-    color: var(--gray) !important;
-    border: 2px solid var(--gray) !important;
-    cursor: not-allowed !important;
+    border: 2px solid var(--danger);
 }
