--- a/ressources/components/button/style.css
+++ b/ressources/components/button/style.css
@@ -16,6 +16,11 @@
     cursor: not-allowed !important;
 }
 
+.button.hover:not(:disabled):hover {
+    transform: translateY(-2px);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
 /* Light standard */
 
 .button.light:not(.outline) {
@@ -60,24 +65,34 @@
     border: 2px solid var(--light);
 }
 
-/* Danger standard */
+/* Danger */
 
 .button.danger:not(.outline) {
-    background: var(--danger);
-    color: var(--light);
-    border: 2px solid var(--danger);
-}
-
-/* Danger outlined */
-
-.button.danger.outline {
-    background-color: var(--danger);
-    color: var(--light);
-    border: 2px solid var(--light);
-}
-
-.button.danger.outline:hover {
-    background-color: var(--light);
+    background: var(--danger-light);
     color: var(--danger);
-    border: 2px solid var(--danger);
+    border: 2px solid var(--danger-light);
+}
+
+/* Warning */
+
+.button.warning:not(.outline) {
+    background: var(--warning-light);
+    color: var(--warning);
+    border: 2px solid var(--warning-light);
+}
+
+/* Success */
+
+.button.success:not(.outline) {
+    background: var(--success-light);
+    color: var(--success);
+    border: 2px solid var(--success-light);
+}
+
+/* Info */
+
+.button.info:not(.outline) {
+    background: var(--info-light);
+    color: var(--info);
+    border: 2px solid var(--info-light);
 }
